--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 {% block content %}
     <div class="content-section container mt-4">
         <form method="POST" action="">
@@ -37,13 +37,13 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.submit(class="btn btn-outline-warning") }}
             </div>
         </form>
     </div>
     <div class="border-top pt-3 container border-dark">
         <small class="text-muted">
-            Need An Account? <a class="ml-2" href="{{ url_for('auth.register') }}">Sign Up Now</a>
+            Don't Have Account? <a class="ml-2" href="{{ url_for('auth.register') }}">Sign Up Now</a>
         </small>
     </div>
 {% endblock content %}
