--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -4,7 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4 border-dark">Join Today</legend>
+                <legend class="border-bottom mb-4 border-dark">Join Us Today</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
@@ -60,7 +60,7 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.submit(class="btn btn-outline-warning") }}
             </div>
         </form>
     </div>
