--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
     {% extends 'bootstrap/base.html'%}
     <!--  Navbar block   -->
     {% block navbar %} {% include 'navbar.html' %} {% endblock %}
-    <!-- BODY block  -->
+    <!-- BodY block  -->
     {% block content %} {% endblock %}
 </body>
 </html>
