--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,7 +1,55 @@
-<nav class="nav navbar navbar-expand-lg navbar-dark bg-success sticky-top shadow-lg">
-    <a class="navbar-brand text-dark" href="/"><h2>Gs-Blog</h2></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <a class="navbar-brand fs-1 fw-bold" href="/">Simakush-Blogging-Website</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span> </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto fs-3 m-6">
+          <li class="nav-item active">
+              <a class="nav-link" href="{{ url_for('main.home')}}">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li>
+              <a class="nav-link" href="{{ url_for('main.new_post') }}">New Blog Post</a>
+          </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right fs-3 fw-bold">
+          {% if current_user.is_authenticated %} {% if current_user.is_admin %} {% else %} {% endif %}
+          <li>
+            <a class="nav-item nav-link text-warning" href="{{ url_for('main.account',uname=current_user.username) }}">{{current_user.username}}</a>
+          </li>
+         <li>
+          <a class="nav-item nav-link text-dark" href="{{ url_for('auth.register') }}">Register</a>
+        </li>
+          <li>
+              <a class="nav-link" href="{{url_for('auth.logout')}}">Sign out</a>
+          </li>
+          {% else %}
+          <li>
+              <a class="nav-link" href="{{url_for('auth.login')}}">Sign in </a>
+          </li>
+          {%endif%}
+      </ul>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <nav class="nav navbar navbar-expand-lg navbar-dark bg-success sticky-top shadow-lg">
+    <a class="navbar-brand text-dark" href="/"><h2>Simakush-Blogging-Website</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon bg-warning" ></span>
+      <span class="navbar-toggler-icon bg-success" ></span>
     </button>
     <div class="navbar-collapse collapse" id="navbarToggle">
       <div class="navbar-nav mr-auto">
@@ -13,13 +61,40 @@
       </div>
       <div class="navbar-nav">
         {% if current_user.is_authenticated %}
-            <a class="btn btn-outline-light text-dark" href="{{ url_for('main.new_post') }}">New Blog</a>
+            <a class="btn btn-outline-light text-dark" href="{{ url_for('main.new_post') }}">New Blog Post</a>
             <a class="nav-item nav-link text-warning" href="{{ url_for('main.account',uname=current_user.username) }}">{{current_user.username}}</a>
-            <a class="nav-item nav-link text-dark" href="{{ url_for('auth.logout') }}">Logout</a>
+            <a class="nav-item nav-link text-dark" href="{{ url_for('auth.logout') }}">Log Out</a>
           {% else %}
-            <a class="nav-item nav-link text-dark" href="{{ url_for('auth.login') }}">Login</a>
+            <a class="nav-item nav-link text-dark" href="{{ url_for('auth.login') }}">Log In</a>
             <a class="nav-item nav-link text-dark" href="{{ url_for('auth.register') }}">Register</a>
           {% endif %}
     </div>
     </div>
 </nav>
+
+        
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link text-dark" href="{{ url_for('main.home')}}">Home <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
+    <div class="navbar-nav">
+      {% if current_user.is_authenticated %}
+          <a class="btn btn-outline-light text-dark" href="{{ url_for('main.new_post') }}">New Blog Post</a>
+          <a class="nav-item nav-link text-warning" href="{{ url_for('main.account',uname=current_user.username) }}">{{current_user.username}}</a>
+          <a class="nav-item nav-link text-dark" href="{{ url_for('auth.logout') }}">Log Out</a>
+        {% else %}
+          <a class="nav-item nav-link text-dark" href="{{ url_for('auth.login') }}">Log In</a>
+          <a class="nav-item nav-link text-dark" href="{{ url_for('auth.register') }}">Register</a>
+        {% endif %}
+  </div>
+  </div>
+</nav>-->
