--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -5,7 +5,7 @@
         <div class="row no-gutters">
             <div class="col-md-8">
             <div class="card-body">
-                <span class="mr-2 card-title font-italic font-weight-bolder">{{ post.author.username }}</span>
+                <span class="mr-2 card-title font-weight-bolder">{{ post.author.username }}</span>
                 <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 <h2 class="article-title">{{ post.title }}</h2>
                 <hr>
@@ -14,14 +14,14 @@
             </div>
             <div class="col-md-4 mx-auto">
                 {% if post.author == current_user %}
-                    <a class="btn btn-outline-secondary btn-lg mt-3 mb-1" href="{{ url_for('main.update_post', post_id=post.id) }}">Update</a>
+                    <a class="btn btn-outline-success btn-lg mt-3 mb-1" href="{{ url_for('main.update_post', post_id=post.id) }}">Update</a>
                     <button type="button" class="btn btn-outline-danger btn-lg m-1 mt-3" data-toggle="modal" data-target="#DeleteModal">Delete</button>
                     <!-- Modal -->
                     <div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog" aria-labelledby="DeleteModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                            <h5 class="modal-title" id="DeleteModalLabel">Delete Post?</h5>
+                            <h5 class="modal-title" id="DeleteModalLabel">Delete Your Post?</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -30,7 +30,7 @@
                             <p>Are you sure you want to delete this post?!</p>
                             </div>
                             <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
                             <form action="{{ url_for('main.delete_post', post_id=post.id) }}" method="POST">
                                 <input class="btn btn-danger" type="submit" value="Delete">
                               </form>
