Changed background color

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -44,7 +44,7 @@ body{
     }
     
     .site-header {
-      background-color: rgba(0, 0, 0, .85);
+      background-color: rgba(241, 233, 233, 0.85);
       -webkit-backdrop-filter: saturate(180%) blur(20px);
       backdrop-filter: saturate(180%) blur(20px);
     }
